[gd_scene load_steps=5 format=3 uid="uid://dy2jmabyaai8m"]

[ext_resource type="Script" path="res://Scenes/UI/User_Interface/user_interface.gd" id="1_csm4g"]
[ext_resource type="PackedScene" uid="uid://l5f56njyk6gi" path="res://Scenes/UI/Healthbar/HealthBar.tscn" id="2_txa2e"]
[ext_resource type="Texture2D" uid="uid://b7oa2whf61p8g" path="res://Assets/Texture/point and click cursor.png" id="3_woo7i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_r2j3s"]
atlas = ExtResource("3_woo7i")
region = Rect2(16, 16, 16, 16)

[node name="UserInterface" type="CanvasLayer"]
script = ExtResource("1_csm4g")

[node name="HealthBar" parent="." instance=ExtResource("2_txa2e")]

[node name="Hotbar" type="Panel" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -224.0
offset_top = -224.0
grow_horizontal = 0
grow_vertical = 0

[node name="MarginContainer" type="MarginContainer" parent="Hotbar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8

[node name="GridContainer" type="GridContainer" parent="Hotbar/MarginContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 3

[node name="Button" type="Button" parent="Hotbar/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
icon = SubResource("AtlasTexture_r2j3s")
expand_icon = true

[node name="Button2" type="Button" parent="Hotbar/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
icon = SubResource("AtlasTexture_r2j3s")
expand_icon = true

[node name="Button3" type="Button" parent="Hotbar/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
icon = SubResource("AtlasTexture_r2j3s")
expand_icon = true

[node name="Button4" type="Button" parent="Hotbar/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
icon = SubResource("AtlasTexture_r2j3s")
expand_icon = true

[node name="Button5" type="Button" parent="Hotbar/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
icon = SubResource("AtlasTexture_r2j3s")
expand_icon = true

[node name="Button6" type="Button" parent="Hotbar/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
icon = SubResource("AtlasTexture_r2j3s")
expand_icon = true

[node name="Button7" type="Button" parent="Hotbar/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
icon = SubResource("AtlasTexture_r2j3s")
expand_icon = true

[node name="Button8" type="Button" parent="Hotbar/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
icon = SubResource("AtlasTexture_r2j3s")
expand_icon = true

[node name="Button9" type="Button" parent="Hotbar/MarginContainer/GridContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 1
icon = SubResource("AtlasTexture_r2j3s")
expand_icon = true

[connection signal="mouse_entered" from="HealthBar" to="." method="_on_ui_element_mouse_entered"]
[connection signal="mouse_exited" from="HealthBar" to="." method="_on_ui_element_mouse_exited"]
[connection signal="mouse_entered" from="Hotbar" to="." method="_on_ui_element_mouse_entered"]
[connection signal="mouse_exited" from="Hotbar" to="." method="_on_ui_element_mouse_exited"]
